Worked more on layout, working on button link to game page, working on span tag to be hidden and then show on mouse over. added psuedocode page for thoughts and layout, for furture use in game business and logc

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
 <body>
     <main class="game-start">
-    <p>Instructions </p>
+        <p class="instructions">Instructions<br><span class="hidden">This is the game of Jeopardy!!! A  quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span> </p><hr>
     </main>
-    <button type="button" class="btn btn-lg btn-success">Start Game</button>
+    <button id='start' class="center-block btn btn-lg btn-success">Start Game</button><hr>
 </body>
+<br>
 <footer>copyright TCH180</footer>
+
 </html>
