still working on linking button to game page, also working on mouseover event for instructions to pop up on mouse over of instructions. styling for page is still rough.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,22 @@
     <link rel="stylesheet" href="jep.css">
     <title>Jeopardy</title>
 </head>
-<header class id="start-screen">
+    <header id="start-screen">
     <p>Jeopardy</p>
-</header>
+    </header>
 
-<body>
-    <main class="game-start">
-        <p class="instructions">Instructions<br><span class="hidden">This is the game of Jeopardy!!! A  quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span> </p><hr>
-    </main>
-    <button id='start' class="center-block btn btn-lg btn-success">Start Game</button><hr>
-</body>
+        <body>
+            <main class="game-start">
+                <p class="instructions">Instructions<br><p/><span id="game-instructions" class="hidden">This is the game of Jeopardy!!!<br> A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span>
+                    <hr>
+            </main>
+                <button id='start' class="center-block btn btn-lg btn-success">Start Game</button><hr> 
+                
+                
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"
+integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="crossorigin="anonymous"></script>
+ </body>
 <br>
 <footer>copyright TCH180</footer>
-
+   
 </html>
