--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <body>
             <main class="game-start">
-                <p class="instructions">Instructions<br><p/><span id="game-instructions" class="#">This is the game of Jeopardy!!!<br> A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span>
+                <p class="instructions">Instructions<br><p/><span id="game-instructions" class="#">This is the game of Jeopardy!!!<br> A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:1984 Hosted the U.S Olympic Womens Marathon Trial<br> A: What is Olympia</span>
                     <hr>
             </main>
                <div id='button'>
