got game board made and some styling done, still working on some css stylig for the game,button works for game start and loads second page.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
         <body>
             <main class="game-start">
-                <p class="instructions">Instructions<br><p/><span id="game-instructions" class="#">This is the game of Jeopardy!!!<br> A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:1984 Hosted the U.S Olympic Womens Marathon Trial<br> A: What is Olympia</span>
+                <p class="instructions">Instructions<br><p/><span id="game-instructions" class="clear-fix">This is the game of Jeopardy!!!<br> A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span>
                     <hr>
             </main>
                <div id='button'>
-                <a href='./game.html' class="center-block  btn btn-lg btn-primary">Start Game</button></a>
+                <a href='./game.html' class="center-block, btn btn-md btn-success">Start Game</button></a>
                 </div></body><hr> 
                 
                 
