game logic for first row is done, it loops through each one and finds the answer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
         <body>
             <main class="game-start">
-                <p class="instructions">Instructions<br><p/><span id="game-instructions" class="clear-fix">This is the game of Jeopardy!!!<br> A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span>
+        <p class="instructions">Instructions<br><p/>
+<span id="game-instructions" class="clear-fix">
+    This is the game of Jeopardy!!!<br> 
+    A quiz competition in which you are presented with general knowledge clues in the form of answers. You must phrase your response in the form of a question.<br> Example<br>Capital Cites<br> Q:Known for the SpaceNeedle<br> A: What is the capital of Washington state </span>
                     <hr>
             </main>
                <div id='button'>
