still working on logic had to change to a different array

--- a/game.html
+++ b/game.html
@@ -17,6 +17,8 @@
 <header id="gameScreen">
     <p>Jeopardy</p>
 </header>
+<div id="score" class=“buttonscore”>score
+        <span id=“scoresheet”>0</span></div>
 
 <body id="game">
     <div class="panel panel-default">
@@ -46,55 +48,47 @@
         </div>
         <div class="panel-body" id="main-board">
             <div id=ds9 class="category col-md-2 col-md-offset-1">
-                <button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#modal">$100</button>
-                <button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html200">$200</button>
-                <button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html300">$300</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html400">$500</button>
+                <button id="100" type="button" class="btn btn-primary btn-lg btn-block">$100</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
             </div>
 
 
             <div class="category col-md-2">
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#">$100</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html200">$200</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html300">$300</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html400">$500</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
             </div>
 
 
             <div class="category col-md-2">
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#">$100</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html200">$200</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html300">$300</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html400">$500</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
             </div>
 
 
             <div id='' class="category col-md-2">
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#">$100</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html200">$200</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html300">$300</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html400">$500</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
+                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
             </div>
 
 
             <div class="category col-md-2">
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#">$100</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html200">$200</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html300">$300</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal" data-target="#html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" data-toggle="modal"
-                    data-target="#html400">$500</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
+                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
             </div>
         </div>
         </main>
