working button for first row, score board not currently working, still working on game logic

--- a/game.html
+++ b/game.html
@@ -53,11 +53,11 @@
         </div>
         <div class="panel-body" id="main-board">
             <div id=ds9 class="category col-md-2 col-md-offset-1">
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block ds91a "  <disabled>$100</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$200</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$300</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$400</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$500</button>
+<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$100</button>
+<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$200</button>
+<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block ">$300</button>
+<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$400</button>
+<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$500</button>
             </div>
 
 
