gaming logic broke, also getting an error in dom for min.js may need to change js lib files

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="jep.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
@@ -17,14 +17,8 @@
 <header id="gameScreen">
     <p>Jeopardy</p>
 </header>
-<<<<<<< HEAD
-<div id="score" class=“buttonscore”>score
-        <span id=“scoresheet”>0</span></div>
-=======
 <div id='score' class="buttonscore">score
     <span id="scoresheet">0</span></div>
->>>>>>> a7c39f34942fac08ffde1fe1ec3808a7f3852167
-
 <body id="game">
     <div class="panel panel-default">
         <div class="panel-heading">
@@ -37,118 +31,67 @@
             <div class="text-center col-md-2 col-md-offset-1">
                 <h4>the house of </h4>
             </div>
-
             <div class="text-center col-md-2">
                 <h4>DS 9</h4>
             </div>
-
             <div class="text-center col-md-2">
                 <h4>Ship Class</h4>
             </div>
-
             <div class="text-center col-md-2">
                 <h4>Music</h4>
             </div>
-
             <div class="text-center col-md-2">
                 <h4>Voyager</h4>
             </div>
-
             <div class="clearfix"></div>
         </div>
         <div class="panel-body" id="main-board">
-            <div id=ds9 class="category col-md-2 col-md-offset-1">
-<<<<<<< HEAD
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$100</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$200</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block ">$300</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$400</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" >$500</button>
-=======
-<<<<<<< HEAD
-                <button id="100" type="button" class="btn btn-primary btn-lg btn-block">$100</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
-=======
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block ds91a "  <disabled>$100</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$200</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$300</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$400</button>
-<button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" <disabled>$500</button>
->>>>>>> a7c39f34942fac08ffde1fe1ec3808a7f3852167
->>>>>>> 8ec383f3fcc19aa0faa2ca2aa00f0c14b13a0277
+<div class="category col-md-2 col-md-offset-1">
+    <button id="houseof" class="btn btn-primary btn-lg btn-block">$100</button>
+    <button id="houseof" class="btn btn-primary btn-lg btn-block">$200</button>
+    <button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$300</button>
+         <button id="houseof" type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$400</button>
+ <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" 
+         html400">$500</button>
             </div>
 
 
             <div class="category col-md-2">
-<<<<<<< HEAD
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
-=======
                 <button value="100" type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$100</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$200</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$300</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$400</button>
                 <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg">$500</button>
->>>>>>> a7c39f34942fac08ffde1fe1ec3808a7f3852167
             </div>
 
 
             <div class="category col-md-2">
-<<<<<<< HEAD
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg ">$100</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html200">$200</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html300">$300</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html400">$400</button>
+                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" 
+         html400">$500</button>
             </div>
 
 
             <div id='' class="category col-md-2">
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
-                <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
-=======
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg ">$100</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html200">$200</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html300">$300</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" html400 ">$500</button>
-            </div>
-
-
-            <div id='' class="category col-md-2 ">
-                <button type="button " class="btn btn-primary btn-lg btn-block " class="btn btn-info btn-lg ">$100</button>
-                <button type="button " class="btn btn-primary btn-lg btn-block " class="btn btn-info btn-lg html200 ">$200</button>
-                <button type="button " class="btn btn-primary btn-lg btn-block " class="btn btn-info btn-lg html300 ">$300</button>
-                <button type="button " class="btn btn-primary btn-lg btn-block " class="btn btn-info btn-lg html400 ">$400</button>
-                <button id="houseof " type='button' class="btn btn-primary btn-lg btn-block " class="btn btn-info btn-lg " 
+                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" 
          html400">$500</button>
->>>>>>> a7c39f34942fac08ffde1fe1ec3808a7f3852167
             </div>
 
 
             <div class="category col-md-2">
-<<<<<<< HEAD
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$100</button>
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$200</button>
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$300</button>
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$400</button>
-                    <button id="houseof"class="btn btn-primary btn-lg btn-block" disable >$500</button>
-=======
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg ">$100</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html200">$200</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html300">$300</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg html400">$400</button>
-                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" html400 ">$500</button>
->>>>>>> a7c39f34942fac08ffde1fe1ec3808a7f3852167
+                <button id="houseof" type='button' class="btn btn-primary btn-lg btn-block" class="btn btn-info btn-lg" 
+         html400">$500</button>
             </div>
         </div>
         </main>
